404 whitespace fix

--- a/css/main.css
+++ b/css/main.css
@@ -1008,7 +1008,7 @@ section.large-block {
 }
 
 .page404 .button-default {
-    margin-top: 4rem;
+    margin-top: 3rem;
 }
 
 #hero-header.page404 {
